@@ -82,6 +82,7 @@ Thank you to core contributor (LB (Ben) Johnston) for writing this documentation
  * Use dropdown buttons on listings in dashboard panels (Sage Abdullah)
  * Implement breadcrumbs design refinements (Thibaud Colas)
  * The `purge_revisions` management command now respects revisions that have a `on_delete=PROTECT` foreign key relation and won't delete them (Neeraj P Yetheendran, Meghana Reddy, Sage Abdullah, Storm Heg)
+ * Add support for Shift + Click behaviour in form submissions and simple tranlations submissions (LB (Ben) Johnston)
 
 ### Bug fixes
 
